# stompbox

./: .gitignore  README.md  pyproject.toml  stompbox.yml
chains/: ambient.yml  clean.yml  drive.yml
docs/: index.html
example/: bass.yml  pad.yml  simple.yml  stompbox.yml  synth.yml
example/chains/: ambient.yml  clean.yml  drive.yml
presets/banjo/: bright.yml  fingerpick.yml  mellow.yml
presets/surge/: bass.yml  init-saw.yml  pad.yml
stompbox/: __init__.py  __main__.py  audio.py  chain.py  cli.py  config.py  coremidi.py  engine.py  engine_proxy.py  meter.py  midi.py  project.py
stompbox/tui/: app.py
